<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/support_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/cardview_light_background"
            app:cardBackgroundColor="@color/dark_brown"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:contentPadding="0dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/comment_coffee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="177dp"
                    android:layout_marginBottom="30dp"
                    android:text="Coffee name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp" />


                <TextView
                    android:id="@+id/lbl_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/cost"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/comment_cost"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_weight="2"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10" />

                <TextView
                    android:id="@+id/lbl_taste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/taste"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/comment_taste"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_weight="2"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10" />

                <TextView
                    android:id="@+id/lbl_availability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/availability"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginLeft="5dp"/>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/comment_availability"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_weight="2"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/comment_hint"
                    android:textColorHint="@color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_comment_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:background="@drawable/round_corner"/>

        <ListView
            android:id="@+id/comment_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:listitem="@layout/comment_row"
            android:dividerHeight="8dp"
            android:divider="@color/light_brown" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
