...
                            android:textColor="@color/white"/>
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
...
