...
                            android:text="@string/search"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                        <EditText
                            android:id="@+id/input_field"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            />
                    </TableRow>

                    <TableRow android:layout_marginTop="10dp">
...

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/btn_filter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/filter_btn"
                    android:background="@drawable/round_corner"
                    android:textColor="@color/white"/>
...
